# mtg_scryfall_grabber

./: .gitignore  GrabCards.py  MANIFEST.in  MSfG.py  README.md  environment.yaml  grab_cards.py  license.md  main.py  msfg.py  mtg_scryfall_grabber.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: pylint.yml  pytest.yml  python-publish.yml
example/: msfg.py
output/: example_output_ONE.json  output.json
