[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mtg_scryfall_grabber"
version = "1.0.0"
authors = [
  { name="Gabriella Agathon", email="gabriella@contrastellar.com" },
]
description = "MTG_Scryfall_Grabber (MSG) is a Python library/repository for scraping and organizing data from the Scryfall Rest-API."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Contrastellar/mtg_scryfall_grabber"
"Bug Tracker" = "https://github.com/Contrastellar/mtg_scryfall_grabber/issues"

[tool.pytest.ini_options]
